src/test/ui/consts/const-eval/partial_ptr_overwrite.stderr
error: any use of this value will cause an error
  --> $DIR/partial_ptr_overwrite.rs:8:9
   |
LL | / const PARTIAL_OVERWRITE: () = {
LL | |     let mut p = &42;
LL | |     unsafe {
LL | |         let ptr: *mut _ = &mut p;
LL | |         *(ptr as *mut u8) = 123;
   | |         ^^^^^^^^^^^^^^^^^^^^^^^ unable to overwrite parts of a pointer in memory at alloc4
...  |
LL | |     let x = *p;
LL | | };
   | |__-
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to previous error

